--- a/ChatApp/src/app/components/nickname-dialog/nickname-dialog.component.css
+++ b/ChatApp/src/app/components/nickname-dialog/nickname-dialog.component.css
@@ -48,7 +48,7 @@
   .char-counter-name {
     position: absolute;
     top: 50%;
-    right: 12px;
+    right: 25px;
     transform: translateY(-50%);
     font-size: 12px;
     color: #6c757d;
